--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to code through the University of Kansas.  I am a former elementary school teacher.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Denver CO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy running and baking bread.</p>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Columbus Park</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am seeking a career change that offers flexibility</p>
     </section>
 
     <footer id="footer">
