updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am learning to code through the University of Kansas.  I am a former elementary school teacher.</p>
+      <p>I am a former elementary school teacher looking for a career change and thought I'd like to learn to code through the University of Kansas.</p>
       <h1>Where I'm From</h1>
-      <p>Denver CO</p>
+      <p>Denver CO via IN and VA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I enjoy running and baking bread.</p>
+      <p>I enjoy running, letterpress printing, wrestling my kids, and baking bread.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>See above...</p>
       <h1>Where do you live?</h1>
-      <p>Columbus Park</p>
+      <p>Columbus Park, KCMO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I am seeking a career change that offers flexibility</p>
+      <p>I am seeking a career change that offers some flexibility, creativity, and that is challenging.</p>
     </section>
 
     <footer id="footer">
